--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "resend": "^6.5.2"
   },
   "devDependencies": {
